# cpp2rust

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: format-apply.yml  format.yml  run-tests.yml
cpp2rust/: CMakeLists.txt  compiler.h  cpp2rust.cpp
libcc2rs/: CMakeLists.txt
rule_preprocessor/: Cargo.toml
rules/: Cargo.toml
scripts/: benchmark.php
tests/: CMakeLists.txt  lit.cfg.py
tests/benchmarks/: array_sum.cpp  bfs.cpp  bst.cpp  fibonacci.cpp  prime.cpp  ptr_fibonacci.cpp  ref_array_sum.cpp  ref_fibonacci.cpp  ref_prime.cpp  sum.cpp
tests/lit/lit/formats/: Cpp2RustTest.py  __init__.py
tests/ub/: dangling-prvalue-as-lvalue.cpp  max.cpp  ub1.cpp  ub10.cpp  ub11.cpp  ub12.cpp  ub13.cpp  ub14.cpp  ub15.cpp  ub16.cpp  ub17.cpp  ub18.cpp  ub19.cpp  ub2.cpp  ub20.cpp  ub21.cpp  ub3.cpp  ub4.cpp  ub5.cpp  ub6.cpp  ub7.cpp  ub8.cpp  ub9.cpp
tests/unit/: 01_local.cpp  02_address_taken.cpp  03_local_array.cpp  04_address_taken_array.cpp  05_new.cpp  06_new_array.cpp  07_unique.cpp  08_unique_array.cpp  09_references.cpp  10_struct.cpp  11_move.cpp  12_test.cpp  13_testing.cpp  14_testing2.cpp  Cargo.toml  __builtin_constant_p.cpp  alloc_array.cpp  array.cpp  assert.cpp  auto.cpp  bool_printing.cpp  borrow_mut_opt.cpp  bounded_struct_ptr.cpp  break.cpp  bst.cpp  cast.cpp  cast_array_to_pointer_decay.cpp  char_printing.cpp  char_printing_cerr.cpp  class.cpp  clone_vs_move.cpp  complex_function.cpp  continue.cpp  cout_alias.cpp  default.cpp  dowhile.cpp  empty_array_init.cpp  exprs.cpp  fatorial.cpp  fcall.cpp  (+121 more)
(+124 files in other folders)
