file(GLOB_RECURSE SOURCES "benchmarks/*.cc" "ub/*.cc"  "unit/*.cc")
foreach(SOURCE ${SOURCES})
  get_filename_component(DIR_NAME ${SOURCE} DIRECTORY)
  get_filename_component(DIR_NAME ${DIR_NAME} NAME_WE)
  get_filename_component(NAME ${SOURCE} NAME_WE)
  add_executable(test_${DIR_NAME}_${NAME} ${SOURCE})
  set_target_properties(test_${DIR_NAME}_${NAME} PROPERTIES COMPILE_OPTIONS "-O3;-w;-g0")
  set_target_properties(test_${DIR_NAME}_${NAME} PROPERTIES LINK_OPTIONS "-O3;-w;-g0")
endforeach(SOURCE)
