[package]
name = "rs"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.153"
libcc2rs = { path = "../../../libcc2rs" }

# Any project that uses rust-analyzer with the rustc_private
# crates must set [package.metadata.rust-analyzer] rustc_private=true to use it.

[package.metadata.rust-analyzer]
rustc_private=true
